tests/ui/pin_project/packed_sneaky-1.stderr
error: #[pin_project] attribute may not be used on #[repr(packed)] types
 --> $DIR/packed_sneaky-1.rs:6:1
  |
6 | #[hidden_repr(packed)]
  | ^^^^^^^^^^^^^^^^^^^^^^

error: #[pin_project] attribute may not be used on #[repr(packed)] types
  --> $DIR/packed_sneaky-1.rs:13:1
   |
13 | #[hidden_repr(packed)]
   | ^^^^^^^^^^^^^^^^^^^^^^

error: #[pin_project] attribute may not be used on #[repr(packed)] types
  --> $DIR/packed_sneaky-1.rs:22:1
   |
22 | #[hidden_repr(packed)]
   | ^^^^^^^^^^^^^^^^^^^^^^
